[package]
name = "kopps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = "0.11.18"
scraper = "0.17.1"
termcolor = "1.3.0"
tokio = { version = "1.31.0", features = ["full"] }
